RESOLVED FIXED142057
Fix the !ENABLE(WEBGL) build after r180609
https://bugs.webkit.org/show_bug.cgi?id=142057
Summary Fix the !ENABLE(WEBGL) build after r180609
Csaba Osztrogonác
Reported 2015-02-26 14:41:25 PST
log: lib/libwebcore_efl.a(lib/../Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp.o):GraphicsContext3DOpenGLCommon.cpp:function WebCore::GraphicsContext3D::forceContextLost(): error: undefined reference to 'WebCore::WebGLRenderingContextBase::forceLostContext(WebCore::WebGLRenderingContextBase::LostContextMode)' collect2: error: ld returned 1 exit status The problem is that forceLostContext() is defined inside ENABLE(WEBGL) guard, but used unconditionally in GraphicsContext3DOpenGLCommon.cpp after http://trac.webkit.org/changeset/180609
Attachments
Patch (1.62 KB, patch)
2015-02-26 14:44 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-02-26 14:44:38 PST
Csaba Osztrogonác
Comment 2 2015-03-05 01:50:51 PST
Dean or Roger, could you possibly review the patch fixes the build breakage your patch caused?
Csaba Osztrogonác
Comment 3 2015-03-06 09:42:00 PST
ping?
WebKit Commit Bot
Comment 4 2015-03-09 13:52:35 PDT
Comment on attachment 247447 [details] Patch Clearing flags on attachment: 247447 Committed r181281: <http://trac.webkit.org/changeset/181281>
WebKit Commit Bot
Comment 5 2015-03-09 13:52:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.