Fix the !ENABLE(WEBGL) build after r180609 https://bugs.webkit.org/show_bug.cgi?id=142057

Reviewed by Darin Adler.

* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::forceContextLost):


Canonical link: https://commits.webkit.org/160537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181281 268f45cc-cd09-0410-ab3c-d52691b4dbfc